; ModuleID = '/home/carl/AnghaBench/htop/extr_Process.c_Process_printTime.c'
source_filename = "/home/carl/AnghaBench/htop/extr_Process.c_Process_printTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"%7lluh \00", align 1
@CRT_colors = common dso_local global i32* null, align 8
@LARGE_NUMBER = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c"%2lluh\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"%02d:%02d \00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"%2d:%02d.%02d \00", align 1
@DEFAULT_COLOR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Process_printTime(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [11 x i8], align 1
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = udiv i64 %11, 100
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = udiv i64 %13, 3600
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = udiv i64 %15, 60
  %17 = urem i64 %16, 60
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %7, align 4
  %19 = load i64, i64* %5, align 8
  %20 = urem i64 %19, 60
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %8, align 4
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* %5, align 8
  %24 = mul i64 %23, 100
  %25 = sub i64 %22, %24
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %9, align 4
  %27 = load i64, i64* %6, align 8
  %28 = icmp uge i64 %27, 100
  br i1 %28, label %29, label %41

29:                                               ; preds = %2
  %30 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %31 = load i64, i64* %6, align 8
  %32 = trunc i64 %31 to i32
  %33 = call i32 (i8*, i32, i8*, i32, ...) @xSnprintf(i8* %30, i32 10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %32)
  %34 = load i32*, i32** %3, align 8
  %35 = load i32*, i32** @CRT_colors, align 8
  %36 = load i64, i64* @LARGE_NUMBER, align 8
  %37 = getelementptr inbounds i32, i32* %35, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %40 = call i32 @RichString_append(i32* %34, i32 %38, i8* %39)
  br label %74

41:                                               ; preds = %2
  %42 = load i64, i64* %6, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %60

44:                                               ; preds = %41
  %45 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %46 = load i64, i64* %6, align 8
  %47 = trunc i64 %46 to i32
  %48 = call i32 (i8*, i32, i8*, i32, ...) @xSnprintf(i8* %45, i32 10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %47)
  %49 = load i32*, i32** %3, align 8
  %50 = load i32*, i32** @CRT_colors, align 8
  %51 = load i64, i64* @LARGE_NUMBER, align 8
  %52 = getelementptr inbounds i32, i32* %50, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %55 = call i32 @RichString_append(i32* %49, i32 %53, i8* %54)
  %56 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %57 = load i32, i32* %7, align 4
  %58 = load i32, i32* %8, align 4
  %59 = call i32 (i8*, i32, i8*, i32, ...) @xSnprintf(i8* %56, i32 10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 %57, i32 %58)
  br label %66

60:                                               ; preds = %41
  %61 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %62 = load i32, i32* %7, align 4
  %63 = load i32, i32* %8, align 4
  %64 = load i32, i32* %9, align 4
  %65 = call i32 (i8*, i32, i8*, i32, ...) @xSnprintf(i8* %61, i32 10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %62, i32 %63, i32 %64)
  br label %66

66:                                               ; preds = %60, %44
  %67 = load i32*, i32** %3, align 8
  %68 = load i32*, i32** @CRT_colors, align 8
  %69 = load i64, i64* @DEFAULT_COLOR, align 8
  %70 = getelementptr inbounds i32, i32* %68, i64 %69
  %71 = load i32, i32* %70, align 4
  %72 = getelementptr inbounds [11 x i8], [11 x i8]* %10, i64 0, i64 0
  %73 = call i32 @RichString_append(i32* %67, i32 %71, i8* %72)
  br label %74

74:                                               ; preds = %66, %29
  ret void
}

declare dso_local i32 @xSnprintf(i8*, i32, i8*, i32, ...) #1

declare dso_local i32 @RichString_append(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
